--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
+    "start": "webpack-dev-server --progress --colors --hot --inline --content-base ./build"
   },
   "repository": {
     "type": "git",
